--- a/index.html
+++ b/index.html
@@ -3,171 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karuna and Ayush Sales & Purchase Entry</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+    <title>User Details Form</title>
 </head>
 <body>
-    <div class="container py-5">
-        <div class="row">
-            <div class="col-lg-5 col-md-8 mx-auto shadow border bg-white p-4 rounded">
-                <nav class="navbar navbar-dark bg-primary">
-                    <a class="navbar-brand" href="#">Karuna and Ayush Sales & Purchase Entry</a>
-                </nav>
-                <br>
-                <form id="myForm" onsubmit="return handleFormSubmit();">
-                    <div id="form_alerts"></div>
+    <h1>User Details Form</h1>
+    <form id="userForm">
+        <label for="name">Name:</label><br>
+        <input type="text" id="name" name="name" required><br><br>
 
-                    <div class="form-group">
-                        <label for="shopDetails" class="form-label">Shop Details</label>
-                        <select id="shopDetails" name="shopDetails" class="form-control" required>
-                            <option value="">---Select Shop---</option>
-                            <option value="Ayush Cyber Cafe">Ayush Cyber Cafe</option>
-                            <option value="Karuna Cosmetic and Gift Place">Karuna Cosmetic and Gift Place</option>
-                            <!-- Add other shops here -->
-                        </select>
-                    </div>
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" name="email" required><br><br>
 
-                    <div class="form-group">
-                        <label for="category" class="form-label">Category</label>
-                        <select id="category" name="category" class="form-control" required>
-                            <option value="">---Select Category---</option>
-                        </select>
-                    </div>
+        <label for="message">Message:</label><br>
+        <textarea id="message" name="message" required></textarea><br><br>
 
-                    <div class="form-group">
-                        <label for="subcategory" class="form-label">Sub-Category</label>
-                        <select id="subcategory" name="subcategory" class="form-control" required>
-                            <option value="">---Select Sub-Category---</option>
-                        </select>
-                    </div>
+        <button type="submit">Submit</button>
+    </form>
 
-                    <div class="form-group">
-                        <label for="amount" class="form-label">Amount</label>
-                        <input type="number" id="amount" name="amount" class="form-control" placeholder="Enter amount" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="customDate" class="form-label">Custom Date</label>
-                        <input type="date" id="customDate" name="customDate" class="form-control" required>
-                    </div>
-
-                    <div class="form-group" id="fileUploadDiv" style="display: none;">
-                        <label for="file">Upload File</label>
-                        <input type="file" class="form-control" name="file" id="file">
-                    </div>
-
-                    <button type="submit" class="btn btn-primary btn-block">SUBMIT DATA</button>
-                </form>
-            </div>
-        </div>
-    </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
     <script>
-        var myfile = {};
+        const form = document.getElementById("userForm");
 
-        // File upload handling
-        $('#file').change(function() {
-            var file = $('#file')[0].files[0];
-            if (file) {
-                var reader = new FileReader();
-                reader.onloadend = function(e) {
-                    myfile.data = e.target.result.split(',')[1]; // Extract base64 string
-                    myfile.name = file.name;
-                };
-                reader.readAsDataURL(file);
-            }
-        });
+        form.addEventListener("submit", async (e) => {
+            e.preventDefault();
 
-        // Shop selection change event
-        $('#shopDetails').change(function() {
-            var shop = $(this).val();
-            if (shop) {
-                // Call the Apps Script function to fetch categories and subcategories
-                google.script.run.withSuccessHandler(updateCategories).getShopDetails(shop);
-            } else {
-                // Reset categories and subcategories if no shop is selected
-                $('#category').empty().append('<option value="">---Select Category---</option>');
-                $('#subcategory').empty().append('<option value="">---Select Sub-Category---</option>');
-            }
-        });
+            const name = document.getElementById("name").value;
+            const email = document.getElementById("email").value;
+            const message = document.getElementById("message").value;
 
-        function updateCategories(shopInfo) {
-            // Clear and update categories dropdown
-            $('#category').empty().append('<option value="">---Select Category---</option>');
-            if (shopInfo && shopInfo.categories) {
-                shopInfo.categories.forEach(function(category) {
-                    $('#category').append('<option value="' + category + '">' + category + '</option>');
+            try {
+                await axios.post("https://script.google.com/macros/s/YOUR_SCRIPT_URL/exec", {
+                    name,
+                    email,
+                    message
                 });
-            }
-
-            // Clear subcategories dropdown
-            $('#subcategory').empty().append('<option value="">---Select Sub-Category---</option>');
-            $('#fileUploadDiv').hide(); // Hide file upload by default
-        }
-
-        // Category selection change event
-        $('#category').change(function() {
-            var category = $(this).val();
-            var shop = $('#shopDetails').val();
-            google.script.run.withSuccessHandler(updateSubcategories).getShopDetails(shop);
-
-            // Show file upload if "Purchase" category is selected
-            if (category === 'Purchase') {
-                $('#fileUploadDiv').show();
-            } else {
-                $('#fileUploadDiv').hide();
+                alert("Your details have been submitted successfully!");
+                form.reset();
+            } catch (error) {
+                alert("There was an error submitting your details. Please try again.");
             }
         });
-
-        function updateSubcategories(shopInfo) {
-            var category = $('#category').val();
-            $('#subcategory').empty().append('<option value="">---Select Sub-Category---</option>');
-
-            if (shopInfo.subcategories && shopInfo.subcategories[category]) {
-                shopInfo.subcategories[category].forEach(function(subcategory) {
-                    $('#subcategory').append('<option value="' + subcategory + '">' + subcategory + '</option>');
-                });
-            }
-        }
-
-        // Form submission handler
-        function handleFormSubmit() {
-            var formdata = $('#myForm').serializeArray();
-            if (myfile.data) {
-                formdata.push({ name: 'myfile', value: myfile.data });
-            }
-
-            // Replace with your actual Google Apps Script URL
-            var scriptUrl = "https://script.google.com/macros/s/AKfycbwPe4rm1tYNFmL-uh4QkUk_1yQIdbCcKzv6--zo33B-fsuZlWqz05v3u5MyLUhSAjV_/exec";
-
-            $.ajax({
-                url: scriptUrl,
-                type: "POST",
-                data: formdata,
-                success: function(response) {
-                    document.getElementById("myForm").reset();
-                    Swal.fire({
-                        position: 'center',
-                        icon: 'success',
-                        title: 'Data successfully saved!',
-                        showConfirmButton: false,
-                        timer: 1500
-                    });
-                },
-                error: function(xhr, status, error) {
-                    Swal.fire({
-                        position: 'center',
-                        icon: 'error',
-                        title: 'Oops! Something went wrong.',
-                        showConfirmButton: true
-                    });
-                }
-            });
-
-            return false; // Prevent default form submission
-        }
     </script>
 </body>
 </html>
